89) Add samba/wins webui.<br>
90) Add dhcp domain oprion support.<br>
91) Update dropbear to 0.53 version.<br>
92) Fix ipt_account webui.<br>
93) Some pppd fixes.<br>
<br>
<b>1.4.x</b><br>
1) Some kernel network/netfilter subsystem fixes.<br>
2) Usb fix some buggy device support.<br>
3) More correct gcc flags for mips arch.<br> 
4) Support __cold gcc attribute in kernel.<br>
5) More fixes for memory subsystem.<br>
6) Small patch for more preempt and speedup.<br>
7) Fix subchannel and country code change.<br>
8) Fix wins webui.<br>
9) Prevent watchdog reset device at serial in/out (poll timer from serial driver).<br>
10) Prevent watchdog reset device at lan rx (poll timer from raeth driver).<br>
11) Update bropbear to 0.53.1 version.<br>
12) Fix restore MAC adresses after "hardware" reset.<br>
13) Fix align in raeth code.<br>
14) Drop code compat with 2.4.x kernel and cleanup.<br>
15) Prevent deadloop at WAN apply change if VPN started.<br>
17) Add tvport support.<br>
18) Route code speedup.<br>
19) Backport new jhash implementation.<br>
20) Some IE compat fixes.<br>
21) Rework and cleanup netfilter code.<br>
22) Fix update firmware on 8Mb FLASH devices.<br>
23) More correct error handling in the course of firmware update.<br>
24) Extended LED boot indication.<br>
25) bridge, route and others speedup.<br>
26) Workaround for no-cache in IE.<br>
27) Backport network fixes from upstream.<br>
28) Consolidate fastnat code.<br>
29) Fix for full disable fastnat mode if need.<br>
30) Fix Cone NAT implementation.<br>
31) Fix syslog in webui without CONFIG_LOGREAD in busybox.<br> 

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>