@@ -425,6 +425,7 @@ CONFIG_BRIDGE_PORT_FORWARD=y
 CONFIG_BRIDGE_IGMPP_PROCFS=y
 # CONFIG_BRIDGE_IGMPP_PROCFS_DEBUG is not set
 CONFIG_BRIDGE_FASTPATH=y
+CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 # CONFIG_DECNET is not set
 CONFIG_LLC=y
