@@ -311,7 +311,8 @@
 28) Consolidate fastnat code.<br>
 29) Fix for full disable fastnat mode if need.<br>
 30) Fix Cone NAT implementation.<br>
-31) Fix syslog in webui without CONFIG_LOGREAD in busybox.<br> 
+31) Fix syslog in webui without CONFIG_LOGREAD in busybox.<br>
+32) Fix EAP in bridge/mbssid mode.<br> 
 
 <br><br>
 <b>For support see:</b><br>
